<?xml version="1.0"?>
<package>
  <name>rose_datamanager</name>
  <version>0.0.0</version>
  <description>The rose_datamanager package</description>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sql_database</build_depend>
  <build_depend>luctor_classes</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>sql_database</run_depend>
  <run_depend>luctor_classes</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>