<?xml version="1.0"?>
<package>
  <name>rose_datamanager_api</name>
  <version>0.0.0</version>
  <description>The datamanager API package</description>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>luctor_classes</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscomm</build_depend>

  <run_depend>luctor_classes</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscomm</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>